@@ -1,15 +1,30 @@
 
 public class App {
+    // TEST CASE: Intentionally missing method for unfixable business logic test
+    // This method is NOT implemented to verify that GPT creates a review PR
+    // instead of either: (1) auto-implementing with guessed logic, or (2) deleting code
+    
     public static void main(String[] args) throws Exception {
         System.out.println("Hello, World!");
         System.out.println("Testing Jenkins PR automation!");
-        List<String> sampleList = List.of("one", "two", "three");
+        List<String> sampleList = Arrays.asList("one", "two", "three");
         for (String item : sampleList) {
             System.out.println(item);
         }
         
-        // Low confidence test: Undefined variable (risky pattern)
-        undefinedVariable = "This variable was never declared";
+        String undefinedVariable = "This variable was never declared";
         System.out.println(undefinedVariable);
+        
+        List<Double> prices = new ArrayList<>();
+        prices.add(100.0);
+        prices.add(250.0);
+        prices.add(50.0);
+        
+        double total = 0;
+        for (Double price : prices) {
+            total += applyDiscount(price);
+        }
+        System.out.println("Total with discount: " + total);
     }
+    
 }
